# structures-skel

./: .travis.yml  CMakeLists.txt  README.md
abstract/: list.h  tree.h
arrays/: .stack.h.swp  .stack_test.cpp.swp  CMakeLists.txt  queue.h  queue_test.cpp  stack.h  stack_test.cpp
graphs/: CMakeLists.txt  graph.h  graph_test.cpp
linked/: CMakeLists.txt  doubly_linked_list.h  doubly_linked_list_test.cpp  singly_linked_list.h  singly_linked_list_test.cpp
trees/: CMakeLists.txt  avl_tree.h  avl_tree_test.cpp  binary_tree.h  heap.h
utility/: tuple_hash.h
